Fix issue with background covering page height
Changes the css to have the background fit to the whole screen
in a more direct way. Have not deleted the ways I previously
fixed the issue, which was messy.

--- a/stylesheet/w-stylesheet.css
+++ b/stylesheet/w-stylesheet.css
@@ -1,7 +1,7 @@
 html {
     background-image: url("https://e1.pxfuel.com/desktop-wallpaper/756/1004/desktop-wallpaper-dark-ultra-minimalist.jpg");
-    background-size: 100%;
-    min-height: 100%
+    background-size: cover;
+    min-height: 100%;
     background-repeat: no-repeat;
     font-family: sans-serif;
     margin: 0;
